Replace MockWebServer with real emulators for integration and E2E tests
- Azure Storage Queue: Azurite emulator + nginx TLS proxy, SharedKey auth
  for queue creation/message peeking verification
- GCP Pub/Sub: google/cloud-sdk:emulators + nginx TLS proxy, subscription
  pull for message verification
- Azure Storage Queue E2E: Azurite on Docker network with Keycloak,
  Awaitility polling for message verification
- All 3 integration tests per destination: NonTls (direct), TLS (nginx),
  mTls (nginx with client cert)
- Document real-emulator-first philosophy and nginx TLS proxy approach in
  copilot-instructions.md and test-patterns-and-conventions.md
- MockWebServer retained only for HTTP destination (where it IS the target)